[package]
name = "example"
version = "0.1.0"
authors = ["pierre <pierre.krieger1708@gmail.com>"]

[dependencies]
bytes = "0.4"
env_logger = "0.5.3"
futures = "0.1"
multiaddr = "0.2"
multiplex = { path = "../multiplex-rs" }
libp2p-floodsub = { path = "../libp2p-floodsub" }
libp2p-peerstore = { path = "../libp2p-peerstore" }
libp2p-ping = { path = "../libp2p-ping" }
libp2p-secio = { path = "../libp2p-secio" }
libp2p-swarm = { path = "../libp2p-swarm" }
libp2p-tcp-transport = { path = "../libp2p-tcp-transport" }
libp2p-websocket = { path = "../libp2p-websocket" }
rand = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-stdin = "0.1"
