[package]
name = "libp2p-identify"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
libp2p-peerstore = { path = "../peerstore" }
libp2p-swarm = { path = "../swarm" }
log = "0.4.1"
multiaddr = "0.2.0"
protobuf = "1.4.2"
tokio-io = "0.1.0"
varint = { path = "../varint-rs" }

[dev-dependencies]
libp2p-tcp-transport = { path = "../tcp-transport" }
tokio-core = "0.1.0"
