[package]
name = "libp2p-identify"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bytes = "0.4"
fnv = "1.0"
futures = "0.1"
libp2p-core = { path = "../core" }
log = "0.4.1"
multiaddr = { path = "../multiaddr" }
parking_lot = "0.5.5"
protobuf = "2"
tokio-io = "0.1.0"
varint = { path = "../varint-rs" }

[dev-dependencies]
libp2p-tcp-transport = { path = "../tcp-transport" }
tokio-core = "0.1.0"
