[package]
name = "libp2p-identify"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bytes = "0.4"
fnv = "1"
futures = "0.1"
libp2p-peerstore = { path = "../peerstore" }
libp2p-core = { path = "../core" }
log = "0.4.1"
multiaddr = { path = "../multiaddr" }
parking_lot = "0.6"
protobuf = "2.0.2"
tokio-codec = "0.1"
tokio-io = "0.1.0"
varint = { path = "../varint-rs" }

[dev-dependencies]
libp2p-tcp-transport = { path = "../tcp-transport" }
tokio-current-thread = "0.1"
